# workshop_risc-v

./: .gitignore  AUTHORS  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
scripts/: build.sh  check_task.sh  init_task.sh  shell.sh
src/riscv_course/: __init__.py  int_utils.py
src/riscv_course/base_module/: __init__.py  base_cli.py  base_task.py
src/riscv_course/lab1_asm_intro/: __init__.py  lab1_asm_intro.py  lab1_cli.py
src/riscv_course/lab2_debug/: __init__.py  lab2_cli.py  lab2_debug.py
src/riscv_course/lab3_condition/: __init__.py  lab3_cli.py  lab3_condition.py
src/riscv_course/lab4_string/: __init__.py  lab4_cli.py  lab4_string.py
src/riscv_course/lab5_daemon/: __init__.py  lab5_cli.py  lab5_daemon.py  led.cpp
src/riscv_course/lab6_interrupt/: __init__.py  lab6_cli.py  lab6_interrupt.py  main.cpp
src/riscv_course/lab7_vectors/: __init__.py  lab7_cli.py  lab7_vectors.py
src/riscv_course/lab8_branch/: __init__.py  lab8_branch.py  lab8_cli.py  lab8_gen.py  lab8_test.s  mse1h2025-edd2b21768e8.json
src/riscv_course/lab9_first/: __init__.py  lab9_cli.py  lab9_first.py  lab9_gen.py  lab9_test.s
src/riscv_course/random_asm_generator/: simple_gen.py  utils.py
src/riscv_course/random_expressions/: random_condition_loop.py  random_expressions.py  string_operations.py
src/token/: generate.py  validate.py
src/utils/: run_solution.py
tst/: check_lab2_distribution.sh  default_labs_integration_test.sh  interactive_labs_integration_test.sh  seed_stress_test.sh  seed_to_check
(+55 files in other folders)
