[project]
name = "riscv_course"
version = "0.0.1"
authors = [
]
description = "TODO: description"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy==2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
